--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>シミんのWeb</title>
   </head>
   <body>
-    <p>正在建设中</p> 
+    <p>正在建设中</p>
+    <p>ここわgit.ximini.topです</p> 
+    <p>私のメインWebサイトはximini.top</p>
   </body>
 </html>
